adding app url field

--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 /*
    Theme Name: HeadlessBackend
    Description: Redirects the front end to domain.com
+   Version: 1.0
+   Author: Matt Davis
 */
